# downloads-organizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: run_pdf_organizer.sh  run_watcher.sh
src/downloads_organizer/: __init__.py  __main__.py  cli.py  config.py  media_organizer.py  notifications.py  pdf_organizer.py  utils.py  watcher.py
tests/: __init__.py
